--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jskit_rails",
+  "name": "rails_jskit",
   "private": true,
   "version": "3.5.0",
   "description": "Gem that provides Rails integration for jskit",
@@ -15,12 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/daytonn/jskit_rails.git"
+    "url": "https://github.com/daytonn/rails_jskit.git"
   },
   "author": "Dayton Nolan",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/daytonn/jskit_rails/issues"
+    "url": "https://github.com/daytonn/rails_jskit/issues"
   },
-  "homepage": "https://github.com/daytonn/jskit_rails"
+  "homepage": "https://github.com/daytonn/rails_jskit"
 }
