--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Gem that provides Rails integration for jskit",
   "main": "index.js",
   "dependencies": {
-    "jskit": "4.0.0-alpha.1"
+    "jskit": "4.0.0"
   },
   "devDependencies": {
 
