--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Gem that provides Rails integration for jskit",
   "main": "index.js",
   "dependencies": {
-    "jskit": "5.0.0"
+    "jskit": "5.1.0-pre"
   },
   "devDependencies": {
 
